# aiad

./: .gitignore  README.md  pyproject.toml  requirements.txt
aiad/: __init__.py  checkpoint.py  config.py  dataset.py  demo.py  env.py  model.py  raster.py  train_ppo.py  train_supervised.py  viz.py
aiad/shapes/: __init__.py  _types.py  compounds.py  polygons.py  primitives.py  scenes.py  splines.py
tests/: test_dataset.py  test_env.py  test_model.py  test_raster.py
